// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Docker Compose Generation Snapshot > base compose matches snapshot 1`] = `
"services:
  api:
    image: ghcr.io/ceoatnorthstar/api:latest
    container_name: opencern-api
    ports:
      - "8080:8080"
    volumes:
      - ~/opencern-datasets:/data
    restart: unless-stopped

  xrootd:
    image: ghcr.io/ceoatnorthstar/xrootd:latest
    container_name: opencern-xrootd
    ports:
      - "8081:8081"
    restart: unless-stopped

  streamer:
    image: ghcr.io/ceoatnorthstar/streamer:latest
    container_name: opencern-streamer
    ports:
      - "9001:9001"
      - "9002:9002"
    restart: unless-stopped
"
`;

exports[`Docker Compose Generation Snapshot > compose with quantum matches snapshot 1`] = `
"services:
  api:
    image: ghcr.io/ceoatnorthstar/api:latest
    container_name: opencern-api
    ports:
      - "8080:8080"
    volumes:
      - ~/opencern-datasets:/data
    restart: unless-stopped

  xrootd:
    image: ghcr.io/ceoatnorthstar/xrootd:latest
    container_name: opencern-xrootd
    ports:
      - "8081:8081"
    restart: unless-stopped

  streamer:
    image: ghcr.io/ceoatnorthstar/streamer:latest
    container_name: opencern-streamer
    ports:
      - "9001:9001"
      - "9002:9002"
    restart: unless-stopped

  quantum:
    image: ghcr.io/ceoatnorthstar/quantum:latest
    container_name: opencern-quantum
    ports:
      - "8082:8082"
    restart: unless-stopped
"
`;
